# detectron_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: openni.launch
src/detectron_ros/: run
